# tiny-twitter-clone

./: .gitignore  README.md
back-end/: haskell-twitter.cabal
back-end/src/: Follow.hs  HomeTimeline.hs  Login.hs  NewUser.hs  Tweet.hs  User.hs  UserTimeline.hs  main.hs
front-end/: elm-package.json  index.html  style.css
front-end/src/: App.elm  AppTypes.elm  Home.elm  HomeTypes.elm  Interop.elm  Login.elm  LoginTypes.elm  Main.elm  Register.elm  RegisterTypes.elm  Users.elm  UsersTypes.elm
