name:                haskell-twitter
version:             0.1.0.0
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable haskell-twitter
  main-is:           main.hs
  hs-source-dirs:    src
  default-language:  Haskell2010
  build-depends:
    base >=4.7 && <4.8,
    hedis >=0.6.9,
    scotty >=0.10.2,
    bytestring,
    transformers,
    time >=1.4.2,
    string-conversions,
    aeson >=0.9.0.1,
    http-types,
    HsOpenSSL,
    base64-bytestring,
    transformers-compat,
    double-conversion,
    text,
    wai-cors,
    bcrypt